# brongnal

./: .envrc  .gitattributes  .gitignore  Cargo.toml  Justfile  README.md  distribute_options.yaml  firebase.json  flake.nix  flutter_rust_bridge.yaml  fly.toml  functional_tui_test.sh  implementation_plan2.md  pubspec.yaml  roadmap.md  upload-keystore.jks
android/: key.properties  settings.gradle
android/app/: build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/kotlin/com/example/brongnal_app/: MainActivity.kt
android/app/src/main/res/mipmap-anydpi-v26/: brongnal_launcher.xml
android/app/src/main/res/values/: brongnal_launcher_background.xml
client/: Cargo.toml
client/src/: lib.rs  main.rs
infra/: hardening.sh  main.tf  variables.tf
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: conversation_list.dart  conversation_page.dart  database.dart  database.g.dart  firebase_options.dart  main.dart  theme.dart  util.dart
lib/common/: config.dart  core.dart  theme.dart  util.dart
lib/mocks/: mock_core.dart
lib/models/: chat_history.dart  conversations.dart  message.dart
lib/screens/: chat.dart  compose.dart  conversations.dart  home.dart  home_page.dart  register.dart
lib/src/rust/: bridge.dart  bridge.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
linux/packaging/deb/: make_config.yaml
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
messages/: brongnal  brongnal.proto
native/client/: Cargo.toml
native/client/src/: attestation.rs  attested_channel.rs  client.rs  lib.rs  main.rs  memory_client.rs  messages.rs  sqlite_client.rs  trusted_digests.rs
native/gossamer/: Cargo.toml
native/gossamer/src/: main.rs  persistence.rs  persistence_tests.rs  service.rs  service_tests.rs
native/hub/: Cargo.toml  cargokit.yaml
native/hub/src/: bridge.rs  frb_generated.rs  lib.rs  mock_server.rs
native/hub/src/signals/: mod.rs
native/launcher/: Cargo.toml
native/launcher/src/: acme.rs  main.rs  measure.rs  vtpm.rs
native/proto/: Cargo.toml  build.rs  gossamer.proto  service.proto
native/proto/application/v1/: application.proto
native/proto/gossamer/v1/: gossamer.proto
native/proto/service/v1/: service.proto
native/proto/src/: lib.rs
native/protocol/: Cargo.toml
native/protocol/src/: aead.rs  bundle.rs  gossamer.rs  lib.rs  ratchet.rs  x3dh.rs
native/server/: Cargo.toml  build.rs
native/server/proto/: service.proto
native/server/src/: brongnal.rs  gossamer.rs  lib.rs  main.rs  memory_brongnal.rs  persistence.rs  push_notifications.rs  sqlite_brongnal.rs
native/server/tests/: integration_tests.rs
protocol/src/: aead.rs  bundle.rs  lib.rs  x3dh.rs
rust/client/src/: client.rs  lib.rs
rust/hub/: Cargo.toml
rust/hub/src/: lib.rs
rust/proto/: build.rs
rust/proto/application/v1/: application.proto
rust/proto/gossamer/v1/: gossamer.proto
rust/protocol/src/: aead.rs
rust/server/: Cargo.toml
rust/server/src/: brongnal.rs  main.rs  persistence.rs  push_notifications.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: hub.podspec  rust_lib_brongnal_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: hub.podspec  rust_lib_brongnal_app.podspec
rust_builder/windows/: CMakeLists.txt
server/: Cargo.toml  build.rs
server/proto/: service.proto
server/src/: lib.rs  main.rs
src/: .main.rs.rustfmt  aead.rs  bundle.rs  client.rs  lib.rs  main.rs  server.rs  traits.rs  x3dh.rs
test/: widget_test.dart
test/models/: chat_history_test.dart
test/screens/: chat_test.dart  compose_test.dart  conversations_test.dart  home_test.dart  register_test.dart
test_driver/: app_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
