[package]
name = "brongnal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
blake2 = "0.10.6"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets", "reusable_secrets"] }
