[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde", "zeroize"] }
futures = "0.3.30"
nom = "7.1.3"
protocol = { path = "../protocol/" }
rustls = { version = "0.23.5", default-features = false, features = ["logging", "std", "ring"] }
server = { path = "../server/" }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["logging", "ring"] }
tonic = { version = "0.11.0", features = ["tls-roots", "zstd"] }
webpki-roots = "0.26.1"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets", "reusable_secrets", "serde", "zeroize"] }

