[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
async-stream = "0.3.6"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde", "zeroize"] }
futures = "0.3.30"
nom = "7.1.3"
proto = { path = "../proto/" }
protocol = { path = "../protocol/" }
rusqlite = { version = "0.32.0", features = [] }
rustls = { version = "0.23.4", default-features = false, features = ["logging", "std", "ring"] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0.64"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "full"] }
tokio-rusqlite = { version = "0.6.0", features = [] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["logging", "ring"] }
tokio-stream = "0.1.16"
tonic = { version = "0.11.0", features = ["tls", "transport", "tls-roots"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets", "reusable_secrets", "serde", "zeroize"] }
xdg = "2.5.2"

[dev.dependencies]
tempdir = "0.3"
