[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-stream = "0.3.6"
base64 = "0.22.1"
blake2 = "0.10.6"
chacha20poly1305 = "0.10.1"
chrono = "0.4.41"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde", "zeroize"] }
nom = "7.1.3"
prost = "0.12.6"
proto = { path = "../proto/" }
protocol = { path = "../protocol/" }
rusqlite = { version = "0.32.1", features = [] }
rustls = { version = "0.23.25", default-features = false, features = ["logging", "std", "ring"] }
serde = "1.0.219"
strum_macros = "0.26"
thiserror = "1.0.69"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "full"] }
tokio-rusqlite = { version = "0.6.0", features = [] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["logging", "ring"] }
tokio-stream = "0.1.17"
tonic = { version = "0.11.0", features = ["tls", "transport", "tls-roots"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets", "reusable_secrets", "serde", "zeroize"] }
xdg = "2.5.2"

