[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
oci-distribution = { version = "0.11.0", default-features = false, features = ["rustls-tls"] }
instant-acme = "0.6.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
