[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
blake2 = "0.10.6"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde", "zeroize"] }
hkdf = "0.12.4"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.58"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets", "reusable_secrets", "serde", "zeroize"] }

