[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
blake2 = "0.10.6"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde", "zeroize"] }
futures = "0.3.30"
prost = "0.12.4"
proto = { path = "../proto/" }
protocol = { path = "../protocol/" }
rusqlite = "0.31.0"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tonic-reflection = { version = "0.11.0", features = ["server"] }
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets", "reusable_secrets", "serde", "zeroize"] }
xdg = "2.5.2"

[dev-dependencies]
client = { path = "../client/" }
